--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ layout: default
       </article>
       {% for post in paginator.posts %}
       <article>
-        <h1>{{ post.title }}</h1>
+        <h2>{{ post.title }}</h2>
+        <small>{% include link_date.html %}</small>
         <p>{{ post.excerpt }}</p>
         <a href="{{ site.baseurl }}{{ post.url }}">[ Read ]</a>
       </article>
